# naim

./: .gitignore  AUTHORS  BUGS  ChangeLog  FAQ  FLAP.lua  Makefile.am  OSCAR.lua  README  README.md  SNAC.lua  TLV.lua  TODO  acinclude.m4  aclocal.m4  autogen.sh  configure.ac  configure.in  index.html  install-home.sh  numutil.lua  params.json
CYGWIN-PATCHES/: naim-0.11.6.7.README  naim-0.11.7.2.README  naim-0.11.7.3.1.README  naim-0.11.7.4.README  naim-0.11.8.1.README  naim-0.11.8.2.1.README  naim-0.11.8.3.2.README  naim-0.11.8.3.README  naim-0.12.0.README
contrib/: extractbuddy.sh
doc/: course.hlp  naim.1  naim.hlp
firetalk/: Makefile.am  aim.c  aim.h  config.h.in  configure.in  firetalk-int.h  firetalk.c  firetalk.h  firetalk.m4  irc.c  lily.c  safestring.c  safestring.h  tester.c  toc.c
include/naim/: modutil.h  naim.h  secs.h
libfiretalk/: Makefile.am  README  aim.c  aim.h  firetalk-errors.h  firetalk-int.h  firetalk-stubs.c  firetalk.c  firetalk.h  firetalk.m4  irc.c  lily.c  md5.c  pdutil.c  rpc.c  rpc.h  safestring.c  safestring.h  tester.c  toc.c  toc2.c  toc2_uuids.h  toctest.c
libltdl/: Makefile.am  acinclude.m4  aclocal.m4  configure.ac
lua/: Makefile.am  buffer.c  cmpllua.sh  commands.c  conn.c  default.lua  garbage.c  hooks.c  moon-int.h  moon.c  moon_conn.c  moon_strings.c  pd.c  script.c  socket.c  util.c  variables.c
lua/examples/: eliza.lua  i-r-elite-script.lua  localpd.lua  lseen.lua  printtree.lua  stats.lua  testnaim.lua  xkcd.lua
lua/liblua/: liolib.c  luaconf.h
lua/lua511/: lapi.c  ldblib.c  ldebug.c  ldo.c  lgc.c  liolib.c  loadlib.c  lobject.h  lopcodes.h  lparser.c  lstate.c  lstrlib.c  lua.h  luaconf.h  lvm.c  print.c
modules/: Makefile.am  distinit.lua  numutil.lua
modules/OSCAR/: FLAP.lua  SNAC.lua  TLV.lua  init.lua  install-home.sh
naimng/: naimng.m4
secs/: block.c  liaison.c  script.c  vars.c
src/: Makefile.am  alias.c  atomizer.c  buddy.c  cmdar.c  cmplhelp.sh  cmplhlp2.sh  commands.c  commands.txt  config.h.in  conio.c  conio_cmds.h  conio_keys.h  echof.c  events.c  firebind.c  fireio.c  gencmd2.sh  gencmdarc.sh  gencmdarh.sh  gencmds.sh  genkeys.sh  hamster.c  help.c  helpcmd.c  hwprintf.c  keyboard.txt  linux_vsprintf.c  linux_vsprintf.h  logging.c  main.c  modutil.c  naim-int.h  naim.m4  naimrc_sample.h  rc.c  rodents.c  script.c  set.c  snapshot.h  (+1 more)
