AC_PREREQ(2.56)
AC_INIT(firetalk, 0.1.2, n@ml.org)
AC_CONFIG_SRCDIR([firetalk-int.h])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE($PACKAGE_TARNAME, $PACKAGE_VERSION, no-define)
AC_DEFINE(LIBFIRETALK_VERSION, PACKAGE_VERSION, [FireTalk version])

AC_ARG_ENABLE(debug,
	[  --enable-debug          turn on debugging (default=no)],
	[
		CFLAGS="$CFLAGS -g3"
		AC_DEFINE(DEBUG_ECHO, 1, [Define to enable debugging messages])
	]
)

AC_ARG_ENABLE(profile,
	[  --enable-profile        turn on profiling (default=no)],
	[
		CFLAGS="$CFLAGS -pg"
		PROFILESUF="_p"
	], [
		PROFILESUF=
	]
)

drivers="AIM ICQ IRC Lily"

AC_ARG_ENABLE(firetalk-lily-binary-link,
	[  --enable-firetalk-lily-binary-link enable experimental binary Lily message passing (default=no)],
	[
		AC_DEFINE(ENABLE_FT_LILY_BINARY_LINK, 1, [Define to enable experimental binary Lily message passing])
	]
)

AC_ARG_ENABLE(raw-irc-modes,
	[  --enable-raw-irc-modes  enable the display of raw mode changes on IRC [[default=no]]],
	[
		AC_DEFINE(RAWIRCMODES, 1, [Define to enable the display of raw mode changes on IRC])
	]
)

AC_DEFINE(ENABLE_FT_LILY_CTCPMAGIC, 1, [Define to enable experimental CTCP magic support])


echo ""
echo ""
echo "Configuring C compiler"
echo ""
AC_PROG_CC
AC_C_CONST
AC_PROG_RANLIB

echo ""
echo ""
echo "Platform compatibility"
echo ""
AC_CHECK_HEADERS(inttypes.h stdint.h)

AC_CHECK_TYPE(uint16_t,
	,
	AC_CHECK_TYPE(__uint16_t,
		AC_DEFINE(uint16_t, __uint16_t, [Define if you have __uint16_t instead of uint16_t]),
		AC_CHECK_TYPE(_G_uint16_t,
			AC_DEFINE(uint16_t, _G_uint16_t, [Define if you have _G_uint16_t instead of uint16_t]),
			AC_MSG_ERROR(unable to find C99 16 bit type)
		)
	)
)
AC_CHECK_TYPE(uint32_t,
	,
	AC_CHECK_TYPE(__uint32_t,
		AC_DEFINE(uint32_t, __uint32_t, [Define if you have __uint32_t instead of uint32_t]),
		AC_CHECK_TYPE(_G_uint32_t,
			AC_DEFINE(uint32_t, _G_uint32_t, [Define if you have _G_uint32_t instead of uint32_t]),
			AC_MSG_ERROR(unable to find C99 32 bit type)
		)
	)
)

AC_CHECK_FUNCS(getuid getpwuid strptime inet_aton)

echo ""
echo ""

AC_CONFIG_FILES([
Makefile
])
AC_OUTPUT

echo ""
echo "Building ${PACKAGE_STRING} using ${CC}"
echo "       Compile flags:" ${CPPFLAGS} ${CFLAGS}
echo "          Link flags:" ${CFLAGS} ${LDFLAGS} ${LIBS}
echo ""
echo "Configuration results:"
echo "    Protocol drivers:" ${drivers}
echo ""
